--- a/components/nexus-client/pom.xml
+++ b/components/nexus-client/pom.xml
@@ -24,6 +24,8 @@
     <version>3.0.0-SNAPSHOT</version>
   </parent>
 
+  <!-- TODO: rename nexus-rest-client ? -->
+
   <artifactId>nexus-client</artifactId>
   <name>${project.groupId}:${project.artifactId}</name>
 
@@ -38,9 +40,20 @@
       <artifactId>nexus-common</artifactId>
     </dependency>
 
-    <!--
-    TODO: Sort out dependencies for modern REST client
-    -->
+    <dependency>
+      <groupId>org.sonatype.siesta</groupId>
+      <artifactId>siesta-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.siesta</groupId>
+      <artifactId>siesta-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.siesta</groupId>
+      <artifactId>siesta-jackson2</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.sonatype.sisu.goodies</groupId>
